// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput component should be able to disable 1`] = `
<div>
  <input
    class="sc-bdvvtL jwWxcW"
    data-testid="test-radio"
    disabled=""
    id="radio-input-1"
    name="radioFormName"
    type="radio"
    value="formValue"
  />
  <label
    class="sc-gsDKAQ sc-dkPtRN ctGiWD dHMkls"
    for="radio-input-1"
    id="radio-input-1-label"
  >
    Radio Label
  </label>
</div>
`;

exports[`RadioInput component should render a RadioInput component, passing all extra properties to the input element 1`] = `
<input
  class="sc-bdvvtL jwWxcW"
  data-testid="test-radio"
  id="radio-input-1"
  name="radioFormName"
  type="radio"
  value="formValue"
/>
`;
